<resources>
    <string name="app_name">Hang Man</string>

    // APP strings
    <string name="classificationFragment">Classification</string>
    <string name="gameFragment">Hang Man</string>
    <string name="userFragment">User profile</string>

    <string name="test">Just a test</string>
    <string name="userName">Username</string>
    <string name="password">Password</string>
    <string name="repeatPassword">Repeat Password</string>
    <string name="logIn">Log In</string>
    <string name="notLoggedIn">Don\'t have an account? Sign up</string>
    <string name="pleaseLogIn">Please, Log In</string>
    <string name="createUser">Create a new account</string>
    <string name="tvName">Name</string>
    <string name="tvEmail">Email</string>
    <string name="signUp">Sign Up</string>
    <string name="signUpGoogle">Sign up with Google</string>


    // Letters
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="f">F</string>
    <string name="g">G</string>
    <string name="h">H</string>
    <string name="i">I</string>
    <string name="j">J</string>
    <string name="k">K</string>
    <string name="l">L</string>
    <string name="m">M</string>
    <string name="n">N</string>
    <string name="o">O</string>
    <string name="p">P</string>
    <string name="q">Q</string>
    <string name="r">R</string>
    <string name="s">S</string>
    <string name="t">T</string>
    <string name="u">U</string>
    <string name="v">V</string>
    <string name="w">W</string>
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="z">Z</string>

    // Descriptions
    <string name="descriptionIVNotSignedIn">Image not signed in</string>


</resources>