<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.user.UserFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clLogInScreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/softWhite"
        android:visibility="visible">

        <TextView
            android:id="@+id/ivLogInTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/permanent_marker"
            android:gravity="center"
            android:text="@string/pleaseLogIn"
            android:textColor="@color/black"
            android:textSize="40sp"
            app:layout_constraintBottom_toTopOf="@id/cvAccountImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cvAccountImage"
            android:layout_width="220dp"
            android:layout_height="220dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/red"
            app:cardCornerRadius="110dp"
            app:layout_constraintBottom_toTopOf="@id/llUserName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivLogInTitle">

            <ImageView
                android:id="@+id/ivNotSigned"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_gravity="center"
                android:contentDescription="@string/descriptionIVNotSignedIn"
                android:src="@drawable/ic_user" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/llUserName"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/llPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cvAccountImage">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center|center"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_user" />


            <EditText
                android:id="@+id/etUserName"
                android:layout_width="254dp"
                android:layout_height="60dp"
                android:hint="@string/userName"
                android:maxLength="20"
                android:maxLines="1"
                android:textSize="20sp" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/llPassword"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/btnLogIn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/llUserName">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center|center"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_key" />


            <EditText
                android:id="@+id/etPassword"
                android:layout_width="254dp"
                android:layout_height="60dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLength="10"
                android:maxLines="1"
                android:textSize="20sp" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogIn"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@color/darkWhite"
            android:text="@string/logIn"
            app:layout_constraintBottom_toTopOf="@id/tvSignUp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/llPassword" />

        <TextView
            android:id="@+id/tvSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/notLoggedIn"
            android:textColor="@color/blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnLogIn" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clSignUp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/softWhite"
        android:paddingHorizontal="16dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/tvSignUpTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/permanent_marker"
            android:gravity="center"
            android:text="@string/createUser"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="26sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/llSignUpInfo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toTopOf="@id/cvSignUp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSignUpTitle">

            <TextView
                style="@style/tvSignUp"
                android:text="@string/userName" />

            <EditText
                android:id="@+id/etUserNameSignUp"
                style="@style/etSignUp"
                android:background="@drawable/marked_borders"
                android:paddingStart="32dp"
                android:hint="@string/userName"
                tools:ignore="RtlSymmetry" />

            <TextView
                style="@style/tvSignUp"
                android:text="@string/tvName" />

            <EditText
                android:id="@+id/etSignUpName"
                style="@style/etSignUp"
                android:background="@drawable/marked_borders"
                android:paddingStart="32dp"
                android:hint="@string/tvName"
                tools:ignore="RtlSymmetry" />

            <TextView
                style="@style/tvSignUp"
                android:text="@string/tvEmail" />

            <EditText
                android:id="@+id/etSignUpEmail"
                style="@style/etSignUp"
                android:background="@drawable/marked_borders"
                android:paddingStart="32dp"
                android:hint="@string/tvEmail"
                tools:ignore="RtlSymmetry" />

            <TextView
                style="@style/tvSignUp"
                android:text="@string/password" />

            <EditText
                android:id="@+id/etSignUpPassword"
                style="@style/etSignUp"
                android:background="@drawable/marked_borders"
                android:paddingStart="32dp"
                android:hint="@string/password"
                tools:ignore="RtlSymmetry" />

            <TextView
                style="@style/tvSignUp"
                android:text="@string/repeatPassword" />

            <EditText
                android:id="@+id/etSignUpPasswordRepeat"
                style="@style/etSignUp"
                android:background="@drawable/marked_borders"
                android:paddingStart="32dp"
                android:hint="@string/repeatPassword"
                tools:ignore="RtlSymmetry" />


        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:backgroundTint="@color/blue"
            app:cardCornerRadius="16dp"
            app:cardElevation="16dp"
            app:layout_constraintBottom_toTopOf="@id/cvSignUpGoogle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/llSignUpInfo">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="80dp"
                android:paddingVertical="8dp"
                android:text="@string/signUp"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvSignUpGoogle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingVertical="8dp"
                android:paddingEnd="16dp"
                tools:ignore="RtlSymmetry">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="start"
                    android:layout_marginHorizontal="16dp"
                    android:src="@drawable/ic_google" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center"
                    android:text="@string/signUpGoogle"
                    android:textSize="16sp" />

            </LinearLayout>


        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>